--- a/Diagnosis.Client.App/Controls/FormParts/DateOffsetPicker.xaml
+++ b/Diagnosis.Client.App/Controls/FormParts/DateOffsetPicker.xaml
@@ -83,7 +83,7 @@
                             <Setter Property="ToolTip"
                                     Value="Фиксированная дата интервала" />
                             <Setter Property="IsEnabled"
-                                    Value="False" />
+                                    Value="True" />
                         </DataTrigger>
                     </Style.Triggers>
                 </Style>
